# primary-education

./: README.md  main.py  pyproject.toml
doc/: plan.md
src/primary_edu/: __init__.py
